debug_output.txt
Compilation failed: Code generation error at test_div_vars.cpp:1:1: C++ compilation failed (exit code 1): test_div_vars.cpp:13:25: error: expected expression
   13 |     auto z = /* expr */ / /* expr */;
      |                         ^
test_div_vars.cpp:13:37: error: expected expression
   13 |     auto z = /* expr */ / /* expr */;
      |                                     ^
2 errors generated.

╔══════════════════════════════════════════════╗
║     Fluxus Compiler Configuration           ║
╚══════════════════════════════════════════════╝
  Source Language    : Python
  Optimization Level : O2
  Target Platform    : linux-x86_64
  Output Path        : test_output
  Interop Enabled    : True
  Debug Info         : False
  Profiler           : False
  Parallel Build     : True
  Max Concurrency    : 4
  C++ Standard       : c++20
  C++ Compiler       : clang++
  Verbose Level      : 3
  Work Directory     : <temp>
  Keep Intermediates : False
  Strict Mode        : False
  Static Analysis    : True
  Input Files        : []
═══════════════════════════════════════════════
[INFO] Compiler environment setup completed
[INFO] Processing file: test_div_vars.py
[INFO] Phase: parsing
[INFO] Phase: type-inference
[INFO] Running type inference analysis
[ERROR] TypeError "Cannot unify TInt (BitWidth 32) with TFloat (BitWidth 64)" (SourceSpan {spanFilename = "<inferred>", spanStart = SourcePos {posLine = 1, posColumn = 1}, spanEnd = SourcePos {posLine = 1, posColumn = 1}})
[INFO] Phase: optimization
[INFO] Running optimizations at level O2
[INFO] Phase: code-generation
[INFO] Phase: c++-compilation
[VERBOSE] Compiling C++: -std=c++20 -c test_div_vars.cpp -o test_div_vars.o -O2 -Wall -Wextra -pthread
